[package]
name = "power-reqwest"
version = "0.1.0"
edition = "2021"
description = "a proc-macro for generate async http api client"
license = "MIT"
documentation = "https://docs.rs/power-reqwest"
homepage = "https://github.com/powermacros/power-reqwest"
repository = "https://github.com/powermacros/power-reqwest"

[workspace]
members = ["lib"]

[[example]]
name = "aliyun_sms"

[lib]
name = "power_reqwest"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { version = "1" }
power-reqwest-lib = { path = "lib", version = "0.1.0" }

[dev-dependencies]
reqwest = { version = "0.12.4" }
serde = { version = "1", features = ["derive"] }
http = { version = "1.1.0" }
chrono = { version = "0.4.38" }

[features]
